# Chatbot

./: .gitignore  CodeExamples  README.md
Dataset/: README.md  RTCR_sections_headings and contents.csv
Dataset/calRegScraper/: .gitignore  scrapy.cfg
Python/Drafts/: DWRegChatBot1.ipynb  bloom_llama_data_loaders.ipynb  bloom_llama_index.ipynb  bloom_llama_index_custom_embeddings.ipynb  readme.md
Python/Final/: readme.md
Regulations/: dw_regulations_2021_0701_effective.docx
Regulations/RTCR/: Bacti Samples Table from dw_regulations_2021_0701_effective_RTCR.csv  README.md  dw_regulations_2021_0701_effective_RTCR.docx  dw_regulations_2021_0701_effective_RTCR.txt
Training-Sets/langchain-testing/: Embedding Creation - TEST.ipynb  RTCR.txt  Text Generation - TEXT.ipynb
Training-Sets/token-testing/: RTCR.docx  RTCR.txt  RTCR_test.txt  max-token-test.ipynb
examples/: A Chatbot Tutorial by ChatGPT  Question_answering_using_embeddings.ipynb  chatbot_tutorial.ipynb
examples/fine-tuned_qa/: README.md  olympics-1-collect-data.ipynb  olympics-2-create-qa.ipynb  olympics-3-train-qa.ipynb
web-frontend/ui/: .replit  README.md  app.py  main.py  model.py  pyproject.toml  requirements.txt
web-frontend/ui/.upm/: store.json
web-frontend/ui/models/: bloom.py  langOpen.py
web-frontend/ui/static/scripts/: chatbot.js  login.js
web-frontend/ui/static/styles/: chatbot.css
web-frontend/ui/templates/: chatbot.html  index.html
web-frontend/ui/webapp/: app.py  botRespond.py  predict.py
web-frontend/ui/webapp/templates/: index.html
web_crawl_Q&A/: web-qa.ipynb
(+250 files in other folders)
